--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <html>
   <body>
     <h1>
-      Hello World to Earth
+      Hi wave, I'm THARUN K
+          A passionate DevOps Engineer from India
+          seedling I’m currently learning DevOps, EEE
+
+          dancers I’m looking to collaborate on Devops and cloud related projects
+
+          man_technologist All of my projects are available at https://github.com/THARUN-KESAVAN
+
+          memo I regularly write articles on https://indianstudent.hashnode.dev
+
+          mailbox How to reach me tharunk@student.tce.edu
+
+          page_facing_up Know about my experiences https://drive.google.com/file/d/1GkoLoJC5ytfE4hpKdb2gsjtdWH9gQlLu/view?usp=drivesdk
+
+          Connect with me:
+          tharun2002k tharun-kesavan-7b4378214 @tharunk
+
+          Languages and Tools:
+          aws bash docker git go jenkins kubernetes linux matlab python
+
     </h1>
   </body>
 </html>
